--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
+    "lint": "npx eslint . || exit 0",
+    "lint:fix": "npx eslint . --fix",
     "dev": "nodemon --inspect src/server.js"
   },
   "repository": {
@@ -24,6 +26,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@lnu/eslint-config": "^1.1.10",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
