Fix to render config

--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,5 @@ services:
     buildCommand: "npm install"
     startCommand: "npm start"
     branch: main
-    rootDir: ./
+    rootDir: .
     autoDeployTrigger: commit
