Fix for render paths

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: node
     plan: free
     buildCommand: "npm install"
-    startCommand: "node src/server.js"
+    startCommand: "npm start"
     branch: main
     rootDir: .
     autoDeployTrigger: commit
